Fixed regression causing overflowing width on post list item buttons

--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -376,6 +376,7 @@ button.icon svg {
   padding-right: 15px;
   background: none;
   height: 50px;
+  width:100%;
 }
 
 .postsList ul li button:focus-within .buttons-info button {
